Fri Dec 12 11:27:49 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* include/tdsiconv.h src/replacements/iconv.c:
	- do not include encoding.h (remove dependency and lot of data)
	- support for UTF-8
	- a lot of small optimizations
	- some conversions fixes

Thu Dec 11 23:05:06 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* src/tds/unittests/utf8_2.c: a bit more verbose

Thu Dec 11 12:24:56 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* Makefile.am: do not create an unneeded file
	* src/ctlib/ct.c: column name from ct_describe must be null-terminated
	* src/tds/unittests/utf8_2.c:
	- fix problem for some iconv implementations

Wed Dec 10 15:35:50 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* src/ctlib/unittests/connect_fail.c:
	* src/ctlib/unittests/t0001.c src/ctlib/unittests/t0005.c:
	- typo
	* src/tds/iconv.c: removed wrong warning

Wed Dec 10 12:20:24 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* src/ctlib/ct.c src/dblib/bcp.c src/odbc/error.c:
	* src/server/login.c src/tds/iconv.c src/tds/write.c:
	- fix some warnings under 64 bit platforms that can cause problems

Wed Dec 10 11:25:17 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* configure.in: fix for --disable-odbc option

Tue Dec  9 21:51:59 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* doc/Makefile.am: fixed "make distcheck"
	* src/tds/read.c src/tds/write.c:
	- used MSG_NOSIGNAL where available

Tue Dec  9 17:57:46 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* configure.in:
	- enable threadsafe by default to remove some undefined problems

Tue Dec  9 11:49:19 EST 2003	JK Lowden <jklowden@schemamania.org>
	* include/replacements.h add vsnprintf prototype

Tue Dec  9 14:39:20 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/odbc.c src/odbc/sql2tds.c:
	- fixed problem with Ruby and ODBC

Tue Dec  9 11:18:45 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* include/tdsstring.h src/apps/freebcp.c src/odbc/native.c: