@@ -1,3 +1,7 @@
+Fri Dec 12 11:42:51 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
+	* include/tdsiconv.h src/replacements/iconv.c:
+	- avoid problem with libc iconv version
+
 Fri Dec 12 11:27:49 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
 	* include/tdsiconv.h src/replacements/iconv.c:
 	- do not include encoding.h (remove dependency and lot of data)
